[package]
name = "eightchip_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.22"
env_logger = "0.9.3"
getrandom = "0.2.8"
line_drawing = "1.0.0"
log = "0.4.17"
pixels = "0.10.0"
randomize = "3.0.1"
rodio = "0.16.0"
winit = "0.27.5"
winit_input_helper = "0.13.0"
